Edited Package Json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gb1383.github.io/My-React-Website/",
+  "homepage": "https://gb1383.github.io/My-React-Website/",
   "name": "gobind-react-website",
   "version": "0.1.0",
   "private": true,
